test/classes/initializers/error-destructor-return-type.good
error-destructor-return-type.chpl:4: error: destructors may not declare a return type
