test/classes/initializers/error-destructor-return-type.chpl


class C{}
proc C.deinit():void {}
